Colonne de droite : les porltets
mise en place des portlets classiques pour coordonnées, faq, plan
design sur les porcelets colonne de droite, coord, faq,plan et calendrier de plone

--- a/src/montoitfleurus/theme/static/index.html
+++ b/src/montoitfleurus/theme/static/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="wrapper">
     <header>
-        <div id="portal-logo"></div>
+        <div id="portal-logo" class="logo-link"></div>
         <div id="portal-titre">
             <span class="rouge-fleurus gras">Mon Toit</span>
             <span class="blanc">Fleurusien.</span>
@@ -60,38 +60,7 @@
                 <div class="visualClear"></div>
             </section>
         </section>
-        <aside id="right-column">
-            <section id="coordonnee" class="section-col-droite">
-                <h2>coordonnées</h2>
-                MON TOIT
-                <p id="coord-adresse">
-                    Rue Brennet, 36<br />
-                    6220 Fleurus
-                </p>
-                <p id="coord-telephone">
-                    O71 82 71 60
-                </p>
-                <p id="coord-fax">
-                    071 80 07 60
-                </p>
-                <p id="coord-email">
-                    info@montoit.be
-                </p>
-                <p id="coord-heures-ouvertures">
-                    Heures d'ouvertures
-                </p>
-            </section>
-            <section id="calendrier" class="section-col-droite">
-                <h2 class="rouge-fleurus">Calendrier</h2>
-            </section>
-            <section id="faq" class="section-col-droite">
-                <h2 class="rouge-fleurus">faq</h2>
-            </section>
-            <section id="plan" class="section-col-droite">
-                <h2 class="rouge-fleurus">plan</h2>
-                Implémentation des cités
-            </section>
-        </aside>
+        <aside id="right-column"></aside>
         <div class="visualClear"></div>
     </div>
 
