Réglage positionnement
Header et son contenu
Bloc content
colonne droite
Combler le vide entre header et main-content

--- a/src/montoitfleurus/theme/static/index.html
+++ b/src/montoitfleurus/theme/static/index.html
@@ -18,51 +18,58 @@
             <span class="rouge-fleurus gras">Mon Toit</span>
             <span class="blanc">Fleurusien.</span>
         </div>
-        <div id="portal-siteactions"></div>
 
         <hr id="border-personal-tools" />
-        <div id="personal-tools"></div>
+        <div id="personal-tools-theme"></div>
+        <div class="visualClear"></div>
 
-        <div id="search-engine"></div>
+        <div id="portal-siteactions-theme"></div>
+
+        <div class="visualClear"></div>
+        <div id="search-engine-theme"></div>
+
+
     </header>
+    <div class="visualClear"></div>
     <div id="main-content">
-        <section id="content-text">
-            <div id="deco-sup"></div>
-            <nav id="menu-sup">
-                <section id="presentation-sup" class="section-nav-sup">
-                    <h2>Présentation</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit.
-                    </p>
+        <div id="bloc-central">
+            <div id="deco-sup"></div><!--banner-->
+            <section id="content-text">
+                <nav id="menu-sup">
+                    <article id="presentation-sup" class="section-nav-sup">
+                        <h2>Présentation</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit.
+                        </p>
+                    </article>
+                    <article id="devenir-locataire-sup" class="section-nav-sup">
+                        <h2>Devenir locataire</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit.
+                        </p>
+                    </article>
+                    <article id="etre-locataire-sup" class="section-nav-sup">
+                        <h2>Vous êtes locataire</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit.
+                        </p>
+                    </article>
+                    <div class="visualClear"></div>
+                </nav>
+                <section id="news-event">
+                    <article id="actualite">
+                        <h2>Actualites</h2>
+                    </article>
+                    <article id="evenement">
+                        <h2>Evénements</h2>
+                    </article>
+                    <div class="visualClear"></div>
                 </section>
-                <section id="devenir-locataire-sup" class="section-nav-sup">
-                    <h2>Devenir locataire</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit.
-                    </p>
-                </section>
-                <section id="etre-locataire-sup" class="section-nav-sup">
-                    <h2>Vous êtes locataire</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit.
-                    </p>
-                </section>
-                <div class="visualClear"></div>
-            </nav>
-            <section id="news-event">
-                <article id="actualite">
-                    <h2>Actualites</h2>
-
-                </article>
-                <article id="evenement">
-                    <h2>Evénements</h2>
-                </article>
-                <div class="visualClear"></div>
             </section>
-        </section>
+        </div><!--bloc-central-->
         <aside id="right-column"></aside>
         <div class="visualClear"></div>
-    </div>
+    </div><!--main-content-->
 
 
     <footer>
