Mise en place de la home page view
css design barre de nav
rules > portal_global_nav

--- a/src/montoitfleurus/theme/static/index.html
+++ b/src/montoitfleurus/theme/static/index.html
@@ -34,6 +34,7 @@
     <div id="main-content">
         <div id="bloc-central">
             <div id="deco-sup"></div><!--banner-->
+            <nav id="navigation-tab"></nav><!--global nav-->
             <section id="content-text">
                 <nav id="menu-sup">
                     <article id="presentation-sup" class="section-nav-sup">
