--- a/src/montoitfleurus/theme/static/index.html
+++ b/src/montoitfleurus/theme/static/index.html
@@ -34,7 +34,10 @@
     <div id="main-content">
         <div id="bloc-central">
             <div id="deco-sup"></div><!--banner-->
-            <nav id="navigation-tab"></nav><!--global nav-->
+            <nav id="navigation-sup">
+                <ul id="navigation-tab">
+                </ul>
+            </nav><!--global nav-->
             <section id="content-text">
                 <nav id="menu-sup">
                     <article id="presentation-sup" class="section-nav-sup">
