--- a/src/montoitfleurus/theme/static/index.html
+++ b/src/montoitfleurus/theme/static/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="wrapper">
     <header>
-        <div id="portal-logo" class="logo-link"></div>
+        <div id="portal-logo-theme" class="logo-link"></div>
         <div id="portal-titre">
             <span class="rouge-fleurus gras">Mon Toit</span>
             <span class="blanc">Fleurusien.</span>
@@ -27,10 +27,10 @@
 
         <div class="visualClear"></div>
         <div id="search-engine-theme"></div>
-
-
     </header>
+
     <div class="visualClear"></div>
+
     <div id="main-content">
         <div id="bloc-central">
             <div id="deco-sup"></div><!--banner-->
