Handle left portlet column This refs affinitic #5848

--- a/src/montoitfleurus/theme/static/index.html
+++ b/src/montoitfleurus/theme/static/index.html
@@ -32,6 +32,7 @@
     <div class="visualClear"></div>
 
     <div id="main-content">
+        <aside id="left-column"></aside>
         <div id="bloc-central">
             <div id="deco-sup"></div><!--banner-->
             <nav id="navigation-sup">
