Add footer sitemap viewlet This refs affinitic #5848

--- a/src/montoitfleurus/theme/static/index.html
+++ b/src/montoitfleurus/theme/static/index.html
@@ -79,16 +79,16 @@
 
     <footer>
         <nav id="menu-inferieur">
-            <section id="presentation-inf" class="section-nav-inf">
-                <h2>Présentation</h2>
+            <section class="section-nav-inf">
+                <h2><a href="#">Présentation</a></h2>
                 <ul>
                     <li><a href="#">La société</a></li>
                     <li><a href="#">Les services</a></li>
                     <li><a href="#">CCLP</a></li>
                 </ul>
             </section>
-            <section id="devenir-locataire-inf" class="section-nav-inf">
-                <h2>Devenir locataire</h2>
+            <section class="section-nav-inf">
+                <h2><a href="#">Devenir locataire</a></h2>
                 <ul>
                     <li><a href="#">Conditions à remplir</a></li>
                     <li><a href="#">Les points de priorité</a></li>
@@ -96,8 +96,8 @@
                     <li><a href="#">Attribution</a></li>
                 </ul>
             </section>
-            <section id="etre-locataire-inf" class="section-nav-inf">
-                <h2>Vous êtes locataire</h2>
+            <section class="section-nav-inf">
+                <h2><a href="#">Vous êtes locataire</a></h2>
                 <ul>
                     <li><a href="#">Administratif</a></li>
                     <li><a href="#">Technique</a></li>
