Handle link on logo This refs affinitic #5848

--- a/src/montoitfleurus/theme/static/index.html
+++ b/src/montoitfleurus/theme/static/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="wrapper">
     <header>
-        <div id="portal-logo-theme" class="logo-link"></div>
+        <a id="portal-logo-theme" class="logo-link"></a>
         <div id="portal-titre">
             <span class="rouge-fleurus gras">Mon Toit</span>
             <span class="blanc">Fleurusien.</span>
