modification hotzone du logo

--- a/src/montoitfleurus/theme/static/index.html
+++ b/src/montoitfleurus/theme/static/index.html
@@ -13,11 +13,10 @@
 <body>
     <div id="wrapper">
     <header>
-        <a id="portal-logo-theme" class="logo-link"></a>
-        <div id="portal-titre">
+        <a id="portal-logo-theme" class="logo-link">
             <span class="rouge-fleurus gras">Mon Toit</span>
             <span class="blanc">Fleurusien.</span>
-        </div>
+        </a>
 
         <hr id="border-personal-tools" />
         <div id="personal-tools-theme"></div>
