ajout d'un wrapper ajout d'un wrapper-theme dégradé de html vers wrapper dégradé giris clair sur body afin de fixer backg du iframe de tiny (10)

--- a/src/montoitfleurus/theme/static/index.html
+++ b/src/montoitfleurus/theme/static/index.html
@@ -12,99 +12,101 @@
 </head>
 <body>
     <div id="wrapper">
-    <header>
-        <a id="portal-logo-theme" class="logo-link">
-            <span class="rouge-fleurus gras">Mon Toit</span>
-            <span class="blanc">Fleurusien.</span>
-        </a>
+        <div id="wrapper-theme">
+            <header>
+                <a id="portal-logo-theme" class="logo-link">
+                    <span class="rouge-fleurus gras">Mon Toit</span>
+                    <span class="blanc">Fleurusien.</span>
+                </a>
 
-        <hr id="border-personal-tools" />
-        <div id="personal-tools-theme"></div>
-        <div class="visualClear"></div>
+                <hr id="border-personal-tools" />
+                <div id="personal-tools-theme"></div>
+                <div class="visualClear"></div>
 
-        <div id="portal-siteactions-theme"></div>
+                <div id="portal-siteactions-theme"></div>
 
-        <div class="visualClear"></div>
-        <div id="search-engine-theme"></div>
-    </header>
+                <div class="visualClear"></div>
+                <div id="search-engine-theme"></div>
+            </header>
 
-    <div class="visualClear"></div>
+            <div class="visualClear"></div>
 
-    <div id="main-content">
-        <aside id="left-column"></aside>
-        <div id="bloc-central">
-            <div id="deco-sup"></div><!--banner-->
-            <nav id="navigation-sup">
-                <ul id="navigation-tab">
-                </ul>
-            </nav><!--global nav-->
-            <section id="content-text">
-                <nav id="menu-sup">
-                    <article id="presentation-sup" class="section-nav-sup">
-                        <h2>Présentation</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit.
-                        </p>
-                    </article>
-                    <article id="devenir-locataire-sup" class="section-nav-sup">
-                        <h2>Devenir locataire</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit.
-                        </p>
-                    </article>
-                    <article id="etre-locataire-sup" class="section-nav-sup">
-                        <h2>Vous êtes locataire</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit.
-                        </p>
-                    </article>
-                    <div class="visualClear"></div>
+            <div id="main-content">
+                <aside id="left-column"></aside>
+                <div id="bloc-central">
+                    <div id="deco-sup"></div><!--banner-->
+                    <nav id="navigation-sup">
+                        <ul id="navigation-tab">
+                        </ul>
+                    </nav><!--global nav-->
+                    <section id="content-text">
+                        <nav id="menu-sup">
+                            <article id="presentation-sup" class="section-nav-sup">
+                                <h2>Présentation</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit.
+                                </p>
+                            </article>
+                            <article id="devenir-locataire-sup" class="section-nav-sup">
+                                <h2>Devenir locataire</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit.
+                                </p>
+                            </article>
+                            <article id="etre-locataire-sup" class="section-nav-sup">
+                                <h2>Vous êtes locataire</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit.
+                                </p>
+                            </article>
+                            <div class="visualClear"></div>
+                        </nav>
+                        <section id="news-event">
+                            <article id="actualite">
+                                <h2>Actualites</h2>
+                            </article>
+                            <article id="evenement">
+                                <h2>Evénements</h2>
+                            </article>
+                            <div class="visualClear"></div>
+                        </section>
+                    </section>
+                </div><!--bloc-central-->
+                <aside id="right-column"></aside>
+                <div class="visualClear"></div>
+            </div><!--main-content-->
+
+
+            <footer>
+                <nav id="menu-inferieur">
+                    <section class="section-nav-inf">
+                        <h2><a href="#">Présentation</a></h2>
+                        <ul>
+                            <li><a href="#">La société</a></li>
+                            <li><a href="#">Les services</a></li>
+                            <li><a href="#">CCLP</a></li>
+                        </ul>
+                    </section>
+                    <section class="section-nav-inf">
+                        <h2><a href="#">Devenir locataire</a></h2>
+                        <ul>
+                            <li><a href="#">Conditions à remplir</a></li>
+                            <li><a href="#">Les points de priorité</a></li>
+                            <li><a href="#">Les documents à fournir</a></li>
+                            <li><a href="#">Attribution</a></li>
+                        </ul>
+                    </section>
+                    <section class="section-nav-inf">
+                        <h2><a href="#">Vous êtes locataire</a></h2>
+                        <ul>
+                            <li><a href="#">Administratif</a></li>
+                            <li><a href="#">Technique</a></li>
+                        </ul>
+                    </section>
+                    <div class="stop-float"></div>
                 </nav>
-                <section id="news-event">
-                    <article id="actualite">
-                        <h2>Actualites</h2>
-                    </article>
-                    <article id="evenement">
-                        <h2>Evénements</h2>
-                    </article>
-                    <div class="visualClear"></div>
-                </section>
-            </section>
-        </div><!--bloc-central-->
-        <aside id="right-column"></aside>
-        <div class="visualClear"></div>
-    </div><!--main-content-->
-
-
-    <footer>
-        <nav id="menu-inferieur">
-            <section class="section-nav-inf">
-                <h2><a href="#">Présentation</a></h2>
-                <ul>
-                    <li><a href="#">La société</a></li>
-                    <li><a href="#">Les services</a></li>
-                    <li><a href="#">CCLP</a></li>
-                </ul>
-            </section>
-            <section class="section-nav-inf">
-                <h2><a href="#">Devenir locataire</a></h2>
-                <ul>
-                    <li><a href="#">Conditions à remplir</a></li>
-                    <li><a href="#">Les points de priorité</a></li>
-                    <li><a href="#">Les documents à fournir</a></li>
-                    <li><a href="#">Attribution</a></li>
-                </ul>
-            </section>
-            <section class="section-nav-inf">
-                <h2><a href="#">Vous êtes locataire</a></h2>
-                <ul>
-                    <li><a href="#">Administratif</a></li>
-                    <li><a href="#">Technique</a></li>
-                </ul>
-            </section>
-            <div class="stop-float"></div>
-        </nav>
-    </footer>
+            </footer>
+        </div>
     </div>
 </body>
 </html>
