mise en place de la colonne de gauche dans les sous-dossiers modification de rules, index.html

--- a/src/montoitfleurus/theme/static/index.html
+++ b/src/montoitfleurus/theme/static/index.html
@@ -32,40 +32,44 @@
             <div class="visualClear"></div>
 
             <div id="main-content">
-                <aside id="left-column"></aside>
-                <div id="bloc-central">
+                <div id="main-content-left-bloc">
                     <div id="deco-sup"></div><!--banner-->
                     <nav id="navigation-sup">
-                        <ul id="navigation-tab">
+                        <ul id="navigation-tab-theme">
                         </ul>
                     </nav><!--global nav-->
-                    <section id="content-text">
-                        <nav id="menu-sup">
-                            <article id="presentation-sup" class="section-nav-sup">
-                                <h2>Présentation</h2>
-                                <p></p>
-                            </article>
-                            <article id="devenir-locataire-sup" class="section-nav-sup">
-                                <h2>Devenir locataire</h2>
-                                <p></p>
-                            </article>
-                            <article id="etre-locataire-sup" class="section-nav-sup">
-                                <h2>Vous êtes locataire</h2>
-                                <p></p>
-                            </article>
-                            <div class="visualClear"></div>
-                        </nav>
-                        <section id="news-event">
-                            <article id="actualite">
-                                <h2>Actualites</h2>
-                            </article>
-                            <article id="evenement">
-                                <h2>Evénements</h2>
-                            </article>
-                            <div class="visualClear"></div>
+                    <div id="central-bloc">
+                        <aside id="left-column"></aside>
+                        <section id="content-text">
+                            <nav id="menu-sup">
+                                <article id="presentation-sup" class="section-nav-sup">
+                                    <h2>Présentation</h2>
+                                    <p></p>
+                                </article>
+                                <article id="devenir-locataire-sup" class="section-nav-sup">
+                                    <h2>Devenir locataire</h2>
+                                    <p></p>
+                                </article>
+                                <article id="etre-locataire-sup" class="section-nav-sup">
+                                    <h2>Vous êtes locataire</h2>
+                                    <p></p>
+                                </article>
+                                <div class="visualClear"></div>
+                            </nav>
+                            <section id="news-event">
+                                <article id="actualite">
+                                    <h2>Actualites</h2>
+                                </article>
+                                <article id="evenement">
+                                    <h2>Evénements</h2>
+                                </article>
+                                <div class="visualClear"></div>
+                            </section>
                         </section>
-                    </section>
-                </div><!--bloc-central-->
+                        <div class="visualClear"></div>
+                    </div>
+                </div><!--main-content-left-bloc-->
+
                 <aside id="right-column"></aside>
                 <div class="visualClear"></div>
             </div><!--main-content-->
