--- a/src/montoitfleurus/theme/static/index.html
+++ b/src/montoitfleurus/theme/static/index.html
@@ -75,7 +75,7 @@
             </div><!--main-content-->
 
 
-            <footer>
+            <footer id="main-footer">
                 <nav id="menu-inferieur">
                     <section class="section-nav-inf">
                         <h2><a href="#">Présentation</a></h2>
