correction orthographe actualité et point dans titre du site

--- a/src/montoitfleurus/theme/static/index.html
+++ b/src/montoitfleurus/theme/static/index.html
@@ -16,7 +16,7 @@
             <header>
                 <a id="portal-logo-theme" class="logo-link">
                     <span class="rouge-fleurus gras">Mon Toit</span>
-                    <span class="blanc">Fleurusien.</span>
+                    <span class="blanc">Fleurusien</span>
                 </a>
 
                 <hr id="border-personal-tools" />
