--- a/src/montoitfleurus/theme/static/index.html
+++ b/src/montoitfleurus/theme/static/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8" />
 <title>Mon Toit Fleurusien</title>
 <link rel="icon"
-      type="image/gif"
-      href="images/favicon.gif" />
+      type="image/png"
+      href="favicon.png" />
 <link href="style.css"
       type="text/css"
       rel="stylesheet">
