--- a/src/montoitfleurus/theme/static/index.html
+++ b/src/montoitfleurus/theme/static/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8" />
 <title>Mon Toit Fleurusien</title>
-<link rel="icon"
-      type="image/png"
-      href="favicon.png" />
 <link href="style.css"
       type="text/css"
-      rel="stylesheet">
+      rel="stylesheet" />
+<link rel="icon"
+      type="image/gif"
+      href="favicon.gif" />
 </head>
 <body>
     <div id="wrapper">
